@@ -1,4 +1,4 @@
-# Copyright 1999-2012 Gentoo Foundation
+# Copyright 1999-2013 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
 # $Header: /var/cvsroot/gentoo-x86/net-misc/cgminer/cgminer-2.7.4.ebuild,v 1.1 2012/08/30 21:30:41 blueness Exp $
 
@@ -38,11 +38,11 @@ DEPEND="
 	opencl? (
 		virtual/opencl
 	)
-	udev? (
-		sys-fs/udev
-	)
 	ztex? (
 		virtual/libusb:1
+	)
+	udev? (
+		virtual/udev
 	)
 "
 RDEPEND="${DEPEND}"
