@@ -1,3 +1,6 @@
+  31 Jan 2013; Stijn Tintel <stijn+gentoo@linux-ipv6.be> cgminer-2.9.5.ebuild:
+  Depend on virtual/udev instead of sys-fs/udev.
+
 *cgminer-2.9.5 (28 Nov 2012)
 
   28 Nov 2012; Stijn Tintel <stijn+bugs@linux-ipv6.be> +cgminer-2.9.5.ebuild,
